feat(controller): layer kubernetes CRD (#16)

---------
